--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -59,7 +59,7 @@ html, body,
 #app {
 	color: $white-900;
 	font-family: $normal-font;
-	font-weight: normal;
+	font-weight: 300;
 	font-size: 16px;
 	overflow: hidden;
 	background-color: $navy-dark;
