Github authentication flow

--- a/frontend/src/containers/LoginContainer.scss
+++ b/frontend/src/containers/LoginContainer.scss
@@ -21,11 +21,11 @@
     margin-bottom: 32px;
   }
 
-  .login-button {
+  .LoginButton {
     font-size: 20px;
     padding: 16px 20px;
 
-    .google-icon {
+    .Icon {
       margin-right: 8px;
       width: 20px;
       height: 20px;
