--- a/frontend/src/colors.scss
+++ b/frontend/src/colors.scss
@@ -8,6 +8,8 @@ $navy-700: #505975;
 
 :export {
   navy700: $navy-700;
+  navyDark: $navy-dark;
+  navyExtraDark: $navy-extra-dark;
 }
 
 $green-400: #00D1CA;
