--- a/frontend/src/components/UserMenu.scss
+++ b/frontend/src/components/UserMenu.scss
@@ -2,91 +2,33 @@
 @import 'fonts.scss';
 
 .UserMenu {
-  $avatar-size: 42px;
-
-  background-color: rgba($black, .95);
-  border-radius: 4px;
-  padding: 18px 24px;
+  background-color: white;
+  border-radius: 2px;
+  padding: 12px 0;
   box-shadow: 0 0px 4px 2px rgba(0, 0, 0, 0.41);
+  margin-top: 16px;
+  font-size: 18px;
 
-  .name {
-    font-size: 16px;
-    font-weight: 500;
+  .MenuTitle {
+    color: black;
+    font-weight: 600;
+    padding: 8px 18px 12px 18px;
+    cursor: default;
   }
 
-  .avatar {
-    align-self: baseline;
-    width: $avatar-size;
-    height: $avatar-size;
-    border-radius: $avatar-size;
-    margin-right: 12px;
-  }
-
-  .actions {
-    margin-top: 16px;
-  }
-
-  .token {
-    margin-top: 18px;
-
-    label {
-      margin-bottom: 2px;
-    }
-
-    input {
-      background-color: transparent;
-      color: white;
-      padding: 8px 12px;
-      padding-right: 0;
-      border: 1px solid rgba($white, .4);
-      border-radius: 2px;
-      border-top-right-radius: 0;
-      border-bottom-right-radius: 0;
-      border-right: none;
-      height: 34px;
-      box-sizing: border-box;
-      width: 160px;
-    }
-
-    .clipboard-button {
-      margin-left: 0;
-      border-top-left-radius: 0;
-      border-bottom-left-radius: 0;
-    }
-  }
-
-  .logout-button {
-    font-size: 12px;
-    height: 34px;
+  .MenuItem {
     margin: 0;
-    min-width: 120px;
-  }
+    min-width: 140px;
+    color: black;
+    padding: 12px 18px;
+    cursor: pointer;
 
-  .more-menu {
-    position: relative;
+    &:hover {
+      background-color: rgba(grey, .3);
+    }
 
-    .more-menu-dropdown {
-      background-color: $white;
-      color: $black-900;
-      bottom: -34px;
-      min-width: 180px;
-      right: 0;
-      position: absolute;
-
-      .option {
-        cursor: pointer;
-        padding: 12px 16px;
-        font-size: 14px;
-
-        &:hover {
-          background-color: $blue-800;
-          color: white;
-        }
-
-        .Icon {
-          margin-right: 8px;
-        }
-      }
+    .Icon {
+      margin-right: 12px;
     }
   }
 }
