--- a/frontend/src/containers/Space.scss
+++ b/frontend/src/containers/Space.scss
@@ -3,7 +3,6 @@
 @import 'fonts.scss';
 
 .Space {
-  background: $navy-dark;
   position: relative;
   display: grid;
   grid-template-columns: 1fr;
@@ -15,6 +14,7 @@
       position: relative;
       padding: 20px $side-margin;
       box-sizing: border-box;
+      cursor: default;
 
       &:nth-child(odd) {
         background-color: $navy;
@@ -40,12 +40,12 @@
         line-height: 17px;
         font-weight: 500;
         margin-right: 24px;
-        width: 100px;
+        width: 20vw;
       }
 
       .EnvironmentItemEndpoints {
         font-size: 18px;
-        font-weight: 300;
+        font-weight: 200;
 
         a {
           cursor: pointer;
@@ -72,7 +72,11 @@
           flex-direction: column;
         }
 
-        .Endpoints {
+        .EnvironmentItemName {
+          width: auto;
+        }
+
+        .EnvironmentItemEndpoints {
           margin-top: 18px;
           margin-left: 50px;
         }
