--- a/frontend/src/components/NewMenu.scss
+++ b/frontend/src/components/NewMenu.scss
@@ -2,22 +2,15 @@
 @import 'fonts.scss';
 @import 'layout.scss';
 
-.UserMenu {
+.NewMenu {
   z-index: $top-z-index;
   background-color: white;
   border-radius: 2px;
   padding: 12px 0;
   box-shadow: 0 0px 4px 2px rgba(0, 0, 0, 0.41);
-  margin-top: 16px;
+  right: 0;
   font-size: 18px;
   position: absolute;
-
-  .MenuTitle {
-    color: black;
-    font-weight: 600;
-    padding: 8px 18px 12px 18px;
-    cursor: default;
-  }
 
   .MenuItem {
     margin: 0;
@@ -32,6 +25,12 @@
 
     .Icon {
       margin-right: 12px;
+    }
+
+    &.MenuItemEnvironment {
+      .Icon {
+        padding: 0 2px;
+      }
     }
   }
 }
