--- a/frontend/src/components/NewMenu.scss
+++ b/frontend/src/components/NewMenu.scss
@@ -8,10 +8,14 @@
   border-radius: 2px;
   padding: 12px 0;
   box-shadow: 0 0px 4px 2px rgba(0, 0, 0, 0.41);
-  right: 0;
   font-size: 18px;
   position: absolute;
 
+  &.position-right { right: 0; }
+  &.position-left { left: 0; }
+}
+
+.NewMenuContent {
   .MenuItem {
     margin: 0;
     min-width: 140px;
