Fix URL styling for production endpoints

--- a/frontend/src/containers/Space.scss
+++ b/frontend/src/containers/Space.scss
@@ -86,7 +86,7 @@
         font-size: 17px;
         font-weight: 200;s
 
-        a {
+        .ItemEndPointUrl {
           cursor: pointer;
           color: white;
           
