Add 'okteto login' step on UI hints (#77)

--- a/frontend/src/components/Notification.scss
+++ b/frontend/src/components/Notification.scss
@@ -1,6 +1,6 @@
 @import 'colors.scss';
+@import 'constants.scss';
 @import 'fonts.scss';
-@import 'layout.scss';
 
 .Notification {
   .toast-container {
