--- a/frontend/src/components/UserMenu.scss
+++ b/frontend/src/components/UserMenu.scss
@@ -1,6 +1,6 @@
 @import 'colors.scss';
+@import 'constants.scss';
 @import 'fonts.scss';
-@import 'layout.scss';
 
 .UserMenu {
   z-index: $top-z-index;
