--- a/frontend/src/components/Switch.scss
+++ b/frontend/src/components/Switch.scss
@@ -124,7 +124,7 @@
 
         &:after{
           left: 14px;
-          background-color: $green-400;
+          background-color: $green;
         }
       }
     }
