--- a/frontend/src/components/Textarea.scss
+++ b/frontend/src/components/Textarea.scss
@@ -2,7 +2,7 @@
 @import 'fonts.scss';
 
 .Textarea {
-  background: $navy-700;
+  background: $navy;
   border: 1px solid $navy;
   border-radius: 3px;
   box-sizing: border-box;
