--- a/frontend/src/containers/Space.scss
+++ b/frontend/src/containers/Space.scss
@@ -3,14 +3,45 @@
 @import 'fonts.scss';
 
 .Space {
-  position: relative;
+  width: 100%;
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 1fr;
+  grid-template-rows: $header-height auto;
   height: 100vh;
+  background: $navy;
+  z-index: $app-z-index;
 
-  .EmptySpace {
+  &Header {
+    background: $navy-dark;
+  }
+
+  &Content {
     position: relative;
+    padding-top: 40px;
+
+    .NewButtonContainer {
+      position: absolute;
+      top: -18px;
+      left: $side-margin;
+
+      .NewButton {
+        cursor: pointer;
+
+        &:hover {
+          path { fill: $green; }
+        }
+
+        &:active {
+          path { fill: $green-secondary; }
+        }
+      }
+    }
+  }
+
+  &Empty {
+    position: relative;
+    background: $navy-dark;
+    padding-top: 48px;
     
     h2 {
       font-size: 28px;
@@ -41,7 +72,7 @@
     }
   }
 
-  .OfflineSpace {
+  &Offline {
     position: relative;
     margin: 52px 0;
     
@@ -54,196 +85,68 @@
       opacity: .1;
     }
   }
+}
 
-  .List {
-    overflow-y: auto;
+.HintContent {
+  user-select: text;
+  text-align: left;
+  font-size: 16px;
 
-    .Item {
-      position: relative;
-      padding: 20px $side-margin 16px $side-margin;
-      box-sizing: border-box;
-      cursor: default;
-
-      &:nth-child(odd) {
-        background-color: $navy;
-
-        .ItemActions {
-          background-color: rgba($navy, .8);
-        }
-      }
-
-      &:hover::before {
-        content: '';
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        left: 0;
-        width: 3px;
-        background-color: $green-400;
-      }
-
-      .ItemIcon {
-        height: 20px;
-        margin-right: 21px;
-        margin-left: 8px;
-      }
-      
-      .ItemName {
-        height: 24px;
-        font-size: 20px;
-        line-height: 20px;
-        font-weight: 500;
-        margin-right: 24px;
-        margin-top: -2px;
-        width: 20vw;
-      }
-
-      .ItemEndpoints {
-        font-size: 17px;
-        font-weight: 200;
-
-        .ItemEndPointUrl {
-          cursor: pointer;
-          color: white;
-          
-          &:not(:last-child) {
-            margin-bottom: 14px;
-          }
-
-          &:visited {
-            color: white;
-          }
-
-          &:hover {
-            color: $green-400;
-
-            .Icon .colorable {
-              fill: $green-400;
-            }
-          }
-
-          .Icon {
-            margin-left: 4px;
-            margin-top: 2px;
-          }
-        }
-      }
-
-      &:hover .ItemActions {
-        display: flex;
-      }
-
-      .ItemActions {
-        display: none;
-        position: absolute;
-        right: 0;
-        height: 100%;
-        top: 0;
-        padding: 0 24px;
-
-        .ActionButton {
-          padding: 8px;
-          cursor: pointer;
-
-          &:hover {
-            background-color: rgba($white-100, .5);
-            border-radius: 48px;
-          }
-        }
-      }
+  .step {
+    &:not(:first-child) {
+      margin-top: 24px;
     }
 
-    @media screen and (max-width: 500px) {
-      .Item {
-        &.layout.horizontal {
-          flex-direction: column;
-        }
-
-        .ItemName {
-          width: auto;
-        }
-
-        .ItemEndpoints {
-          margin-top: 18px;
-          margin-left: 50px;
-        }
-      }
+    .number {
+      color: $green;
+      font-weight: 600;
+      font-size: 32px;
     }
   }
 
-  .NewButtonContainer {
-    position: relative;
+  p {
+    margin-bottom: 12px;
+    font-size: 20px;
+  }
 
-    .NewButton {
-      cursor: pointer;
+  code {
+    cursor: text;
+    font-family: $code-font;
+    background-color: $black;
+    padding: 10px 14px;
+    color: $white;
+    width: 100%;
+    box-sizing: border-box;
+    border-radius: 3px;
+    font-weight: normal;
+    font-size: 20px;
+    line-height: 22px;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+    white-space: nowrap;
+    overflow: hidden;
+    overflow-x: auto;
+
+    &.cli:before {
+      user-select: none;
+      content: '$';
+      padding-right: 6px;
+      color: $green;
+    }
+
+    &.cli-okteto:before {
+      content: 'okteto>';
+    }
+
+    .output {
+      color: rgba(white, .6);
     }
   }
 
-  .ActionBar {
-    padding: 24px $side-margin;
-  }
-
-  .HintContent {
-    user-select: text;
-    text-align: left;
-    font-size: 16px;
-
-    .step {
-      &:not(:first-child) {
-        margin-top: 24px;
-      }
-
-      .number {
-        color: $green-400;
-        font-weight: 600;
-        font-size: 32px;
-      }
-    }
-
-    p {
-      margin-bottom: 12px;
-      font-size: 20px;
-    }
-
-    code {
-      cursor: text;
-      font-family: $code-font;
-      background-color: $black;
-      padding: 10px 14px;
-      color: $white;
-      width: 100%;
-      box-sizing: border-box;
-      border-radius: 3px;
-      font-weight: normal;
-      font-size: 20px;
-      line-height: 22px;
-      border-top-right-radius: 0;
-      border-bottom-right-radius: 0;
-      white-space: nowrap;
-      overflow: hidden;
-      overflow-x: auto;
-
-      &.cli:before {
-        user-select: none;
-        content: '$';
-        padding-right: 6px;
-        color: $green-400;
-      }
-
-      &.cli-okteto:before {
-        content: 'okteto>';
-      }
-
-      .output {
-        color: rgba(white, .6);
-      }
-    }
-
-    .ClipboardButton {
-      padding: 0 10px;
-      margin-left: 0;
-      border-top-left-radius: 0;
-      border-bottom-left-radius: 0;
-    }
+  .ClipboardButton {
+    padding: 0 10px;
+    margin-left: 0;
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
   }
 }
