--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -91,7 +91,7 @@ input[type='radio']:before {
 }
 
 input[type='radio']:hover:before {
-	border-color: $green-400;
+	border-color: $green;
 }
 
 input[type='radio']:checked:before {
