--- a/frontend/src/layout.scss
+++ b/frontend/src/layout.scss
@@ -137,8 +137,11 @@
 	min-width: 0;
 }
 .ellipsis {
-	display: inline-block;
+	display: block;
 	overflow: hidden;
 	white-space: nowrap;
 	text-overflow: ellipsis;
+}
+.overflow {
+	overflow: hidden;
 }
