Multi space improvements and fixes (#151)
* Prepare for inviting from space create dialog

* Use prism-graphql client

* Use graphql variables

* Simplify space selection

* Improve experience of long deleting spaces

* Sort spaces list

--- a/frontend/src/containers/SpaceExplorer.scss
+++ b/frontend/src/containers/SpaceExplorer.scss
@@ -56,6 +56,11 @@
         }
       }
 
+      &.deleting {
+        opacity: .2;
+        pointer-events: none;
+      }
+
       &:hover {
         background: rgba(black, .2);
       }
