Leave shared space from UI (#163)
* Implement leave

* Fix buttons for shared spaces

* Properly sort spaces list

--- a/frontend/src/containers/SpaceHeader.scss
+++ b/frontend/src/containers/SpaceHeader.scss
@@ -8,6 +8,14 @@
   font-weight: 200;
   box-sizing: border-box;
 
+  &Name {
+    .Owner {
+      display: block;
+      margin-top: 4px;
+      font-size: 20px;
+    }
+  }
+
   &Actions {
     margin-right: 24px;
 
