--- a/frontend/src/containers/SpaceHeader.scss
+++ b/frontend/src/containers/SpaceHeader.scss
@@ -8,7 +8,19 @@
   font-weight: 200;
   box-sizing: border-box;
 
+  &Info {
+    margin-right: 12px;
+  }
+
+  &Namespace {
+    font-size: 14px;
+    margin-top: 6px;
+    color: rgba(white, .8);
+  }
+
   &Name {
+    white-space: nowrap;
+      
     .Owner {
       display: block;
       margin-top: 4px;
