UI improvements to support invited users (#185)
* Display info about invited users

* Email validation

* Fix issues

--- a/frontend/src/containers/SpaceInvite.scss
+++ b/frontend/src/containers/SpaceInvite.scss
@@ -43,7 +43,12 @@
         background-color: rgba($navy-dark, .05);
       }
 
-      .Avatar {
+      &Info {
+        font-size: 12px;
+        color: rgba(black, .7);
+      }
+
+      .UserAvatar {
         margin-right: 6px;
       }
 
