fix invite email copy (#196)

--- a/api/assets/emails/invite.html.tmpl
+++ b/api/assets/emails/invite.html.tmpl
@@ -76,7 +76,7 @@ background-color: #fafafa;
               <table width="100%" cellpadding="0" cellspacing="0" style="font-family: &quot;Helvetica Neue&quot;, Helvetica, Arial, sans-serif; box-sizing: border-box; font-size: 16px; margin: 0;">
                 <tr style="font-family: &quot;Helvetica Neue&quot;, Helvetica, Arial, sans-serif; box-sizing: border-box; font-size: 16px; margin: 0;">
                   <td class="content-block aligncenter" style="font-family: &quot;Helvetica Neue&quot;, Helvetica, Arial, sans-serif; box-sizing: border-box; font-size: 16px; margin: 0; padding: 0 0 20px;" align="center" valign="top">
-                    <h3 style="font-family: &quot;Helvetica Neue&quot;, Helvetica, Arial, &quot;Lucida Grande&quot;, sans-serif; box-sizing: border-box; font-size: 22px; color: #000; line-height: 1.2em; font-weight: 400; margin: 20px 0 0;">{{ .User }} has shared his Okteto space with you.</h3>
+                    <h3 style="font-family: &quot;Helvetica Neue&quot;, Helvetica, Arial, &quot;Lucida Grande&quot;, sans-serif; box-sizing: border-box; font-size: 22px; color: #000; line-height: 1.2em; font-weight: 400; margin: 20px 0 0;">{{ .User }} has shared an Okteto space with you.</h3>
                   </td>
                 </tr>
                 <tr style="font-family: &quot;Helvetica Neue&quot;, Helvetica, Arial, sans-serif; box-sizing: border-box; font-size: 16px; margin: 0;">
